# infinityidtest

./: Anchor.toml  README.md
programs/infinityid/: Cargo.toml
programs/infinityid/src/: error.rs  instructions.rs  lib.rs  state.rs
programs/infinityid/src/instructions/: create_profile.rs  earn_points.rs
programs/infinityid/src/state/: profile.rs
programs/infinityidtest/: Cargo.toml
programs/infinityidtest/src/: errors.rs  instruction.rs  lib.rs  processor.rs  state.rs
programs/infinityidtest/src/test/: integration.rs
tests/: infinityid.ts  infinityidtest.ts
